--- a/EventViewModel/build.gradle
+++ b/EventViewModel/build.gradle
@@ -7,6 +7,14 @@ plugins {
 android {
     compileSdk 32
 
+    namespace = 'com.rolandwo.eventviewmodel'
+
+    publishing{
+        singleVariant('release') {
+            withSourcesJar()
+        }
+    }
+
     defaultConfig {
         minSdk 21
         targetSdk 32
@@ -30,15 +38,15 @@ android {
     }
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.github.rolandwo'
+            artifactId = 'eventviewmodel'
+            version = '1.0.3'
 
-                groupId = 'com.github.rolandwo'
-                artifactId = 'eventviewmodel'
-                version = '1.0.2'
+            afterEvaluate {
+                from components.release
             }
         }
     }
