--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,20 @@
 plugins {
-    id 'com.android.library'
+    id 'com.android.application'
 }
 
 android {
+    namespace = 'com.rolandwo.eventviewmodel'
+
     compileSdk 32
 
     defaultConfig {
+        applicationId "com.rolandwo.eventviewmodel"
         minSdk 21
         targetSdk 32
+        versionCode 1
+        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
