--- a/EventViewModel/build.gradle
+++ b/EventViewModel/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
 
 android {
@@ -27,6 +28,21 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.rolandwo.eventviewmodel'
+            artifactId = 'eventviewmodel'
+            version = '1.0.6'
+
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
+}
+
 
 dependencies {
 
